--- a/ch01/第一章练习.md
+++ b/ch01/第一章练习.md
@@ -9,9 +9,16 @@ int main()
 }
 ```
 
-# 练习1.2
+[# 练习1.2](https://github.com/CharlesHe21/Cpp-Primer-Exercises-5th-ed/blob/master/ch01/ex1_2.cpp)
 
 >改写程序，让它返回-1。返回值-1通常被当作程序错误的标识。重新编译并运行你的程序，观察你的系统如何处理main返回的错误标识。
+
+```
+int main()
+{
+	return -1;
+}
+```
 
 # 练习1.3
 
