--- a/ch01/第一章练习.md
+++ b/ch01/第一章练习.md
@@ -20,6 +20,30 @@ int main()
 }
 ```
 
-# 练习1.3
+[# 练习1.3](https://github.com/CharlesHe21/Cpp-Primer-Exercises-5th-ed/blob/master/ch01/ex1_3.cpp)
 
 >编写程序，在标准输出上打印Hello, World。
+
+```
+#include<iostream>
+int main()
+{
+	std::cout<<"Hello, World"<<std::endl;
+	return 0;
+}
+```
+
+[# 练习1.4](https://github.com/CharlesHe21/Cpp-Primer-Exercises-5th-ed/blob/master/ch01/ex1_4.cpp)
+
+>我们的程序使用加法运算符+来将两个数相加。编写程序使用乘法运算符\*，来打印两个数的积。
+
+```
+#include<iostream>
+int main()
+{
+	int v1,v2;
+	std::cin>>v1>>v2;
+	std::cout<<"The product of "<<v1<<" and "<<v2<<" is "<<v1*v2<<std::endl;
+	return 0;
+}
+```
